# GPT_User_Consistency

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
data/raw/: GPT_answer.xlsx  exploded_data_filtered2.csv  exploded_data_stages1.csv  exploded_data_stages2.csv  exploded_data_stages3.csv
docs/: data_manifest.md
scripts/: run_fast_steps.sh  run_pipeline.sh
src/gpt_similarity/: __init__.py  aggregate_similarity.py  bootstrap_stats.py  clean_data.py  cli.py  config.py  deberta_similarity.py  hungarian.py  io.py  prepare_data.py  tfidf_similarity.py  visualize.py
