[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-similarity-study"
version = "0.1.0"
description = "Clean reproducible pipeline for GPT response similarity analyses."
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.2",
  "pandas>=2.3",
  "scipy>=1.16",
  "scikit-learn>=1.7",
  "matplotlib>=3.10",
  "seaborn>=0.13",
  "torch>=2.7",
  "transformers>=4.53",
  "tqdm>=4.67",
  "openpyxl>=3.1",
  "nltk>=3.9",
]

[project.scripts]
gpt-similarity = "gpt_similarity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
